--- a/auth_service/src/main/resources/application.properties
+++ b/auth_service/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.cloud.config.enabled=false
 spring.cloud.discovery.enabled=false
 spring.cloud.consul.port=8500
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://192.168.116.142:8080/realms/bdcc-realm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://192.168.116.142:8080/realms/bdcc-realm/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/bdcc-realm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/bdcc-realm/protocol/openid-connect/certs
